# braindance

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  TODO.md  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: fmt.yaml  format.yml  test.yaml  test.yml
include/: error.h  macros.h  settings.h
include/buffers/: chars.h  str.h
include/cli/: parser.h
include/core/: core.h  info.h  input.h  offset.h
include/core/buffer/: chars.h  content.h  lines.h  prompt.h  str.h
include/core/display/: layouts.h  update.h
include/defaults/: keybindigs.h
include/handlers/: file.h
include/utils/: strfuncs.h
src/: buffer.rs  constants.rs  counter.rs  cursor.rs  editor.rs  error.c  error.rs  errors.c  errors.h  history.rs  keybindings.h  lines.rs  macros.rs  main.c  main.rs  options.h  prelude.rs  prompt.rs  range.rs  render.rs  row.rs  settings.h  settings.rs  size.rs  terminal.rs  utils.rs
src/buffers/: chars.c  str.c
src/cli/: parser.c
src/cmdline/: cli.c  cli.h
src/core/: core.c  core.h  fileh.c  fileh.h  info.c  info.h  input.c  input.h  offset.c  offset.h
src/core/buffer/: chars.c  chars.h  content.c  content.h  lines.c  lines.h  prompt.c  prompt.h  str.c  str.h  window.c  window.h  windowbuf.c  windowbuf.h
src/core/display/: layouts.c  layouts.h  update.c  update.h
src/core/terminal/: termutils.c  termutils.h
src/defaults/: actions.c  keybindigs.c  keybindigs.h
src/display/: layouts.c  layouts.h  update.c  update.h
src/event/: mod.rs  mouse.rs  paste.rs
src/event/key/: arrow.rs  mod.rs  shortcut.rs
src/handlers/: file.c
src/update/: editor.rs  frame.rs  menu.rs  mod.rs  prompt.rs  row.rs
src/utils/: path.c  path.h  strfuncs.c
subprojects/: unstdalias.wrap
test/: main.c  maintest.c  test_chars.c  test_error.c  test_file.c  test_parser.c  test_strfuncs.c
test/buffertests/: linestest.c  linestest.h
test/core/buffer/: chars.c  lines.c
